# ChangeLog for virtual/perl-Socket
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/ChangeLog,v 1.7 2012/12/26 08:55:43 tove Exp $

*perl-Socket-2.7.0 (26 Dec 2012)

  26 Dec 2012; Torsten Veller <tove@gentoo.org> +perl-Socket-2.7.0.ebuild:
  Version bump

  17 Dec 2012; Agostino Sarubbo <ago@gentoo.org> perl-Socket-2.6.0.ebuild:
  Add ~ppc64, wrt bug #442188

  13 Nov 2012; Jeroen Roovers <jer@gentoo.org> perl-Socket-2.6.0.ebuild:
  Marked ~hppa (bug #442188).

  12 Nov 2012; Anthony G. Basile <blueness@gentoo.org> perl-Socket-2.6.0.ebuild:
  keyword ~ppc, bug #442188

*perl-Socket-2.6.0 (22 Aug 2012)

  22 Aug 2012; Torsten Veller <tove@gentoo.org> +perl-Socket-2.6.0.ebuild:
  Version bump

  14 Jul 2012; Ulrich Müller <ulm@gentoo.org> perl-Socket-2.1.0-r1.ebuild,
  perl-Socket-2.2.0.ebuild:
  QA: Define mandatory ebuild variables, bug 425848.

*perl-Socket-2.2.0 (10 Jun 2012)
*perl-Socket-2.1.0-r1 (10 Jun 2012)
*perl-Socket-1.940.0-r1 (10 Jun 2012)

  10 Jun 2012; Kent Fredric <kentfredric@gmail.com>
  -perl-Socket-1.940.0.ebuild, +perl-Socket-1.940.0-r1.ebuild,
  -perl-Socket-2.1.0.ebuild, +perl-Socket-2.1.0-r1.ebuild,
  +perl-Socket-2.2.0.ebuild:
  Version Bump

*perl-Socket-2.1.0 (06 Apr 2012)

  06 Apr 2012; Kent Fredric <kentfredric@gmail.com> +perl-Socket-2.1.0.ebuild:
  Version Bump

  27 Feb 2012; Kent Fredric <kentfredric@gmail.com>
  -perl-Socket-1.950.0.ebuild:
  Gone On CPAN

*perl-Socket-1.990.0 (27 Feb 2012)

  27 Feb 2012; Kent Fredric <kentfredric@gmail.com>
  +perl-Socket-1.990.0.ebuild:
  Version Bump

*perl-Socket-1.950.0 (06 Dec 2011)
*perl-Socket-1.940.0 (06 Dec 2011)
*perl-Socket-1.870.100_rc (06 Dec 2011)
*perl-Socket-1.820.0 (06 Dec 2011)

  06 Dec 2011; Kent Fredric <kentfredric@gmail.com>
  +perl-Socket-1.820.0.ebuild, +perl-Socket-1.870.100_rc.ebuild,
  +perl-Socket-1.940.0.ebuild, +perl-Socket-1.950.0.ebuild, +metadata.xml: