@@ -5,12 +5,13 @@ EBUILD perl-Socket-2.1.0-r1.ebuild 408 SHA256 c8cf4b26ee90f002da225d01aa6274daa3
 EBUILD perl-Socket-2.2.0.ebuild 377 SHA256 f8186b025259a40dc7cfd69273f68f3a2f3375a23888feff4882f766a6389887 SHA512 2b173aac781af423c08fdd0d6a9bcde5a4d238ad59cfc192089d36caf991b39b3c22d49791e3fafd12ec7ffcea98445ae8b0e1dc7f8e783b526b27c73ae3f012 WHIRLPOOL 9818cc693e019d81b2147a8c783e6c05313358805be5ea77dbe76c6c27ef8b019e9a0785103344f19515eeef4f58e646c0f32bdc1e13bec155968078fa0005b9
 EBUILD perl-Socket-2.6.0.ebuild 395 SHA256 b787ea061d65774bafe7dfa0155956a190944f5807bbf3762e5552fd21552257 SHA512 814602b4e6d7662f97f62dc98348b236978165259ee5d69540cc127b18d95a62222f890fbcdc2effd9f4b240795feb77c5a444a9962a253a56c0d667eaa1665f WHIRLPOOL eb1a9cb981f504d1b48f4193c1aa2fb27bf4f590b856f410bfd4e13f7eb7823ee8533bd2ae8aa116329ec8fd5e47c45d8566ec52020f4cbc3324f3749a0b23d8
 EBUILD perl-Socket-2.7.0.ebuild 396 SHA256 a0602dd79caafda8e319de19205bcb3057e244493b2b71abf3a6ac2a6e309a46 SHA512 dd58447fd3a67b16a7ad57848c0c8c052ec1d37fc6d976627d41666e38c2224c5a5aa6020f2465df38493da1bee22689876110aed976aa70632e1d033bebba15 WHIRLPOOL 4a1ddf5c891246b0b8bbcbba6411049b341fbbc05718898c4c9d54aaf2747ec8ece4d7da654f3b81fddd75defa4740ba0be212fc2954ac45856be6b8137b7ae7
-MISC ChangeLog 2028 SHA256 601dc70b56a0aa2007e407529eff44d9a3c225380512a540914fe3d1666934fc SHA512 dad8a84348b34e64323229ab8f84c3f18a97d9f8a3d90ecc64554292b46e71dfdd042c64a2681044a6f4e925c2e3908c6a1e8e99e119c57585ec08a527c9220a WHIRLPOOL 85b20ad1504cc4d1b04369df3842c22f1c4580dcdfcc15cd61549df10c25124731ff6506e6307d3c5072d7d72a6d1975fa26f132f4c1b65ed9613e75abf80067
+EBUILD perl-Socket-2.8.0.ebuild 396 SHA256 c611eccfb8f9a1842d2c882ab0f320621a073d78606e3cb4e46c86dcd90681ae SHA512 0a4ebb865f26fa19205f9f89b5d5f07f5337467b9f37e06e6603abb66a6f86ff195856203a938b6cbcb74004daf9d31d8380281fd8834c6190148102098f571c WHIRLPOOL 5c7d497d30ee6349fe0450638c8adb3fdb0ddf6bcd4211d05b0476ee96f004ed2e812b261ec011c28dd0ff8fa83193b77bef7853d32b398e6e0fa5b68bca3e99
+MISC ChangeLog 2153 SHA256 b9d145c75e6632aff16fd80a717f4807f75b387a6bd492f97491c90e7db3d3ff SHA512 1292cc4a40647b771913583f86989d166bd256ebcd88d7e1e123bb7c015303efff915a8cb516beb69d8019b6bab74099f40fe63623cb7cc5f05bd97f1e8d4f7d WHIRLPOOL 326fd11b9bf309a67e88687c76104e848f6d7b2494cee3cf6082ff1b785e5a64d395ac817f202fd064338b6bf6b0c142a3cf5e91d76a6ceeb1a2e9a4a71e98e3
 MISC metadata.xml 161 SHA256 03133f1c99f9897289d97dc74a0ccc9b0a8138838507982422de997be1910a54 SHA512 105dfa237851f1eaa24a51b58404cc2dd4c96e5ae29dc602aa10fe916c2b8af6e6272ac89e7e1352d64e38799f38a293eebf488843490417657e94c3e751f5c8 WHIRLPOOL e2af9fd199381669706b1ddf6bc2db7a9019b6acdb1422a8f2ee8311705c819c120e87df08901c7865b37c916540862ff1d207773541d848ece41eb03e8a3d0b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDau5AACgkQV3J2n04Eauw4tACgzFiaay5cfo2YREilw4OIs9HT
-VWIAoNbyPhZC55csYnLEcpPufY7ZdfEg
-=VrHp
+iEYEAREIAAYFAlDcmNgACgkQV3J2n04Eauw52gCffANk4vsS1Awd3r48TowG8hyv
+oU0An00CCdcwGC5PRfSv9em1itGUhu7H
+=lyW+
 -----END PGP SIGNATURE-----
