@@ -1,6 +1,11 @@
 # ChangeLog for virtual/perl-Socket
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/ChangeLog,v 1.7 2012/12/26 08:55:43 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Socket/ChangeLog,v 1.8 2012/12/27 18:52:07 tove Exp $
+
+*perl-Socket-2.8.0 (27 Dec 2012)
+
+  27 Dec 2012; Torsten Veller <tove@gentoo.org> +perl-Socket-2.8.0.ebuild:
+  Version bump
 
 *perl-Socket-2.7.0 (26 Dec 2012)
 
